# camoufox

./: .gitignore  CONTRIBUTING.md  Dockerfile  MIGRATE_150.md  Makefile  README.md  multibuild.py  pyproject.toml  upstream.sh
.mozbuild-local/: machrc
__tests_/: test_fingerprint_pipeline.py  test_firefox_patch_verifier.py
__tests__/: conftest.py  integration_probe.py  pyproject.toml  test_agent_daemon.py  test_agent_dom.py  test_agent_dom_serializer.py  test_cache.py  test_fingerprint_pipeline.py  test_firefox_patch_verifier.py  test_juggler_viewport_sizing.py  test_pkgman_versions.py
__tests__/build-tester/: README.md  package-lock.json  package.json  test_build_tester.py  test_surface_probe.py
__tests__/build-tester/scripts/: bundle.py  certificate.py  constants.py  generate-presets.py  grading.py  presets.py  run_tests.py  runner.py  test_page_template.html  wsl.py
__tests__/build-tester/src/lib/: types.ts
__tests__/build-tester/src/lib/checks/: collectors.ts  core.ts  extended.ts  index.ts  workers.ts
__tests__/fixtures/cpp/: runtime_probe.cpp
__tests__/fixtures/cpp/mozilla/glue/: Debug.h
__tests__/ml_models/: __init__.py  test_data_pipeline.py  test_dataset_inspection.py  test_generation.py  test_models.py  test_runtime_cpp_parity.py  test_runtime_export.py  test_sweep.py  test_training_utils.py
__tests__/playwright/: README.md  __init__.py  conftest.py  pyproject.toml
__tests__/playwright/async/: test_browser.py  test_browsercontext.py  test_browsercontext_proxy.py  test_browsertype_connect.py  test_defaultbrowsercontext.py  test_har.py  test_headful.py  test_input.py  test_keyboard.py  test_navigation.py  test_network.py  test_page.py  test_proxy.py  test_remote_juggler.py  test_video.py  test_wait_for_function.py  test_wait_for_url.py
__tests__/playwright/async_imp/: conftest.py
__tests__/service-tester/: README.md  _bundle.py  _certificate.py  _constants.py  run_tests.py  test_service_tester.py
assets/: base.mozconfig
config/: laptop-all.yml  laptop-clicks.yml  laptop-keyboard.yml
docs/: agent-cli-architecture.md  beta-testing-ff146.md  development.md  fingerprint-debugging.md  patch-upgrading-guide.md  per-context-patches.md  playwright-maintenance.md  remote-juggler.md
example/: async_example.py  example.py  example_simple.py  fingerprint.json  persona_consistency.py
ml-models/: README.md  pyproject.toml
ml-models/rotunda_models/: __init__.py  __main__.py  _generated_data_capture.py  constants.py  data.py  dataset_inspection.py  diagnostics.py  generation.py  keyboard_logic.py  random_sweep.py  render_debug_videos.py  runtime_export.py  settings.py  train.py  training_utils.py  types.py  utils.py  wandb.py
ml-models/rotunda_models/cli/: __init__.py  clicks.py  common.py  inspect.py  keyboard.py  main.py  runtime.py
ml-models/rotunda_models/models/: __init__.py  common.py  keyboard.py  mouse.py
ml-models/tests/: test_models.py
patches/: anti-font-fingerprinting.patch  audio-context-spoofing.patch  audio-fingerprint-manager.patch  browser-init.patch  canvas-spoofing.patch  chromeutil.patch  config.patch  cross-process-storage.patch  disable-extension-newtab.patch  fingerprint-injection.patch  font-hijacker.patch  font-list-spoofing.patch  geolocation-spoofing.patch  global-style-sheets.patch  locale-spoofing.patch  macos-sandbox-crash-fix.README.md  macos-sdk-bootstrap-26.4.patch  media-device-spoofing.patch  navigator-spoofing.patch  network-patches.patch  screen-spoofing.patch  speech-voices-spoofing.patch  timezone-spoofing.patch  vm-access-logging.patch  voice-spoofing.patch  webgl-spoofing.patch  webrtc-ip-spoofing.patch  window-dimensions-context.patch  windows-theming-bug-modified.patch  zz-display-media-features.patch  zz-reporting-policy.patch  zz-screen-available-context.patch  zz-vm-access-log-file-output.patch  zzz-vm-access-log-returns.patch  zzzz-vm-access-log-buffered-writer.patch  zzzzz-runtime-profile-geometry-raw.patch  zzzzz-runtime-profile-navigator-appversion.patch  zzzzz-runtime-profile-navigator-gpc.patch
pythonlib/: README.md  publish.sh  pyproject.toml
pythonlib/camoufox/: __init__.py  __main__.py  _generated_profile.py  _warnings.py  async_api.py  debug_dump.py  exceptions.py  fingerprints.py  geolocation.py  ip.py  locales.py  multiversion.py  pkgman.py  server.py  sync_api.py  utils.py  virtdisplay.py
pythonlib/camoufox.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pythonlib/camoufox/assets/: __init__.py  repos.yml
pythonlib/camoufox/fingerprinting/: __init__.py  common.py  compiler.py  fonts.py  host_linux.py  host_macos.py  host_windows.py  hosts.py  voices.py
pythonlib/camoufox/geo/: __init__.py  geolocation.py  ip.py  locales.py
pythonlib/camoufox/gui/: backend.py
pythonlib/camoufox/webgl/: sample.py
pythonlib/rotunda/: __init__.py  __main__.py  __version__.py  _generated_profile.py  _warnings.py  addons.py  async_api.py  cache.py  debug_dump.py  exceptions.py  fingerprints.py  multiversion.py  pkgman.py  remote_juggler.py  server.py  sync_api.py  utils.py  virtdisplay.py
pythonlib/rotunda/agent/: __init__.py  client.py  daemon.py  dom.py  dom_serializer.py  paths.py  runtime.py  store.py
pythonlib/rotunda/assets/: __init__.py  connectRemoteJuggler.js  repos.yml  warnings.yml
pythonlib/rotunda/fingerprinting/: compiler.py  fonts.py  host_linux.py  host_macos.py  hosts.py
pythonlib/rotunda/geo/: geolocation.py  ip.py
pythonlib/rotunda/gui/: __init__.py  backend.py
pythonlib/rotunda/gui/qml/: main.qml
schemas/: camoufox-profile.openapi.yaml  rotunda-ml-data-capture.openapi.yaml  rotunda-profile.openapi.yaml
scripts/: _mixin.py  copy-additions.sh  debug-runtime-models.py  demo-runtime-models.py  developer.py  generate-assets-car.sh  generate-ml-data-models.sh  install-local-build.sh  package-helper.sh  package.py  patch.py  repair_macos_release_zip.sh  resolve_ci_artifact.py  resolve_playwright_versions.py  runtime-model-debug.cpp  validate_fingerprint_example.py  verify_firefox_patches.py
service-tester/: README.md
(+65 files in other folders)
