[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "camoufox"
version = "0.5.0"
description = "Wrapper around Playwright to help launch Camoufox"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "daijro", email = "daijro.dev@gmail.com" },
]
keywords = [
    "client",
    "fingerprint",
    "browser",
    "scraping",
    "injector",
    "firefox",
    "playwright",
]
classifiers = [
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "browserforge>=1.2.4,<2",
    "inquirer",
    "language-tags",
    "lxml",
    "numpy",
    "orjson",
    "platformdirs",
    "playwright",
    "pysocks",
    "pyyaml",
    "requests",
    "rich",
    "rich-click",
    "screeninfo",
    "typing_extensions",
    "ua_parser",
]

[project.urls]
Homepage = "https://camoufox.com/python"
Repository = "https://github.com/daijro/camoufox"

[project.optional-dependencies]
geoip = ["geoip2"]
gui = ["PySide6"]

[project.scripts]
camoufox = "camoufox.__main__:cli"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["camoufox*"]

[tool.setuptools.package-data]
camoufox = [
    "*.cfg",
    "py.typed",
]
"camoufox.assets" = [
    "*.js",
    "*.xml",
    "*.yml",
]
"camoufox.gui" = [
    "assets/*",
    "qml/*",
]
"camoufox.webgl" = [
    "*.db",
]
