[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "camoufox"
version = "0.5.0"
description = "Wrapper around Playwright to help launch Camoufox"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "daijro", email = "daijro.dev@gmail.com" },
]
keywords = [
    "client",
    "fingerprint",
    "browser",
    "scraping",
    "injector",
    "firefox",
    "playwright",
]
classifiers = [
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "browserforge>=1.2.4,<2",
    "inquirer",
    "language-tags",
    "lxml",
    "numpy",
    "orjson",
    "platformdirs",
    "playwright",
    "pydantic>=2,<3",
    "pysocks",
    "pyyaml",
    "requests",
    "rich",
    "rich-click",
    "screeninfo",
    "typing_extensions",
    "ua_parser",
]

[project.urls]
Homepage = "https://camoufox.com/python"
Repository = "https://github.com/daijro/camoufox"

[project.optional-dependencies]
geoip = ["geoip2"]
gui = ["PySide6"]

[project.scripts]
camoufox = "camoufox.__main__:cli"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff==0.15.11",
    "ty==0.0.31",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["camoufox*"]

[tool.setuptools.package-data]
camoufox = [
    "*.cfg",
    "py.typed",
]
"camoufox.assets" = [
    "*.js",
    "*.xml",
    "*.yml",
]
"camoufox.gui" = [
    "assets/*",
    "qml/*",
]
"camoufox.webgl" = [
    "*.db",
]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "I",
    "B",
    "UP",
    "SIM",
    "RUF",
    "PIE",
    "RET",
]
ignore = [
    "B008",
    "E501",
]

[tool.ty.analysis]
allowed-unresolved-imports = ["maxminddb"]

[tool.ty.environment]
python = ".venv"
python-version = "3.10"

[tool.ty.src]
exclude = ["camoufox/gui/**"]

[tool.ty.terminal]
output-format = "concise"
