[project]
name = "camoufox-playwright-tests"
version = "0.0.0"
description = "Playwright regression tests for Camoufox"
requires-python = ">=3.10"
dependencies = [
    "auditwheel==6.1.0",
    "autobahn==23.1.2",
    "black==24.8.0",
    "flake8==7.1.1",
    "flaky==3.8.1",
    "mypy==1.11.1",
    "objgraph==3.6.1",
    "Pillow==10.4.0",
    "pixelmatch==0.3.0",
    "playwright",
    "pre-commit==3.4.0",
    "pyOpenSSL==24.2.1",
    "pytest==8.3.2",
    "pytest-asyncio==0.21.2",
    "pytest-cov==5.0.0",
    "pytest-repeat==0.9.3",
    "pytest-timeout==2.3.1",
    "pytest-xdist==3.6.1",
    "requests==2.32.3",
    "service_identity==24.1.0",
    "setuptools==72.1.0",
    "twisted==24.7.0",
    "types-pyOpenSSL==24.1.0.20240722",
    "types-requests==2.32.0.20240712",
    "wheel==0.42.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
addopts = "-Wall -rsx -vv -s"
markers = [
    "integration",
    "skip_browser",
    "only_browser",
    "skip_platform",
    "only_platform"
]
junit_family = "xunit2"
asyncio_mode = "auto"

[tool.pyright]
pythonVersion = "3.10"
reportMissingImports = false
reportTypedDictNotRequiredAccess = false
reportCallInDefaultInitializer = true
reportOptionalSubscript = false
reportUnboundVariable = false
strictParameterNoneValue = false
